<resources>
    <string name="app_name">My Chat Application</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_in_register">Enter Your Mobile Number To Authenticate.</string>
    <string name="submitBtn_in_register">SUBMIT</string>
    <string name="otp_verification_description">OTP will be received to registered mobile number</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="didn_t_receive_otp">Didn\'t Receive OTP?</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="india_code">+91</string>
    <string name="username">UserName</string>
    <string name="last_message">LastMessage</string>
    <string name="type_a_message">Type a message…</string>
    <string name="online">Online</string>
    <string name="groupname">GroupName</string>
    <string name="chat_application">Chat Application</string>
    <string name="chats">Chats</string>
    <string name="groupchat">group</string>
    <string name="status">status</string>
    <string name="calls">calls</string>
    <string name="submit">Submit</string>
    <string name="name">Name</string>
    <string name="myprofile">MyProfile</string>
    <string name="logout">Logout</string>
    <string name="receivertext">This is send message</string>
    <string name="sendertext">This is receive message</string>
    <string name="this_is_title">This is title</string>
    <string name="this_is_message">This is message</string>
    <string name="add_group">Add Group</string>
    <string name="group_name">Group Name</string>
    <string name="group_icon">Group Icon</string>
</resources>