<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.HomePage">

    <data>

        <variable
            name="viewModel"
            type="com.example.chatapp.viewmodel.MainPageViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/chatList_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/theme_color"
            android:theme="?attr/actionBarTheme">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/chat_application"
                    android:textColor="@color/white"
                    android:textSize="@dimen/titleSize"
                    android:textStyle="bold" />

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/profilePhotoView"
                    android:layout_width="@dimen/loginUserProfileSizeInChatList"
                    android:layout_height="@dimen/loginUserProfileSizeInChatList"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="10dp"
                    android:scaleType="centerCrop"
                    app:shapeAppearanceOverlay="@style/roundedImage"
                    app:srcCompat="@drawable/modified_account_circle" />

            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>

        <View
            android:id="@+id/view_line"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_below="@id/chatList_toolbar"
            android:background="@color/white"/>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/view_line"
            android:background="@color/white"
            android:elevation="5dp"
            app:tabGravity="fill"
            app:tabIndicatorColor="@color/theme_color"
            app:tabMode="fixed"
            app:tabSelectedTextColor="@color/theme_color"
            app:tabTextColor="#575757">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/chats" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/groupchat" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/status" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/calls" />

        </com.google.android.material.tabs.TabLayout>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/viewpager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/tabLayout"
            android:background="@color/theme_color"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    </RelativeLayout>

</layout>