<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.RegisterPage">

    <data>
        <variable
            name="viewModel"
            type="com.example.chatapp.viewmodel.RegisterViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true">

        <TextView
            android:id="@+id/register_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/registerTitleMarginTop"
            android:text="@string/title_in_register"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/registerTitleTextSize" />

        <EditText
            android:id="@+id/register_mobile_number_input"
            android:layout_width="@dimen/registerNumberWidth"
            android:layout_height="wrap_content"
            android:layout_below="@+id/register_title_text"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/registerNumberMarginTop"
            android:layout_marginStart="@dimen/registerNumberMarginTop"
            android:backgroundTint="@color/black"
            android:inputType="number"
            android:maxLength="10"
            android:textAlignment="center"
            android:textAppearance="@style/Widget.AppCompat.Spinner.Underlined"
            android:textColor="@color/black"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/registerNumberSize" />

        <ImageView
            android:id="@+id/country_flag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/submit_mobile_number"
            android:layout_below="@+id/register_title_text"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_toStartOf="@+id/country_code"
            android:src="@drawable/indian_flag" />

        <TextView
            android:id="@+id/country_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/submit_mobile_number"
            android:layout_below="@+id/register_title_text"
            android:layout_toStartOf="@+id/register_mobile_number_input"
            android:paddingTop="15dp"
            android:text="@string/india_code"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />


        <Button
            android:id="@+id/submit_mobile_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/register_mobile_number_input"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/submitMarginTop"
            android:backgroundTint="@color/black"
            android:text="@string/submitBtn_in_register"
            android:textColor="@color/white" />
    </RelativeLayout>
</layout>