<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.UserDetailsPage">

    <data>

        <variable
            name="ViewModel"
            type="com.example.chatapp.viewmodel.UserDetailsViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            app:srcCompat="@drawable/ic_baseline_arrow_back_24"
            app:tint="@color/black" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:layout_above="@+id/userName"
            android:layout_centerInParent="true"/>

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/profilePhoto"
            android:layout_width="@dimen/profileSizeInRegisterPage"
            android:layout_height="@dimen/profileSizeInRegisterPage"
            android:layout_above="@+id/userName"
            android:layout_centerInParent="true"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/ic_baseline_account_circle_24"
            app:shapeAppearanceOverlay="@style/roundedImage"/>

        <EditText
            android:id="@+id/userName"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_above="@+id/status"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="36dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/input_bg"
            android:drawableStart="@drawable/ic_baseline_account_circle_24"
            android:drawablePadding="5dp"
            android:ems="10"
            android:focusable="true"
            android:fontFamily="serif"
            android:hint="@string/name"
            android:importantForAutofill="no"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColor="@color/black"
            android:textCursorDrawable="@color/black"
            android:textStyle="bold"
            tools:ignore="SpeakableTextPresentCheck" />


        <EditText
            android:id="@+id/status"
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:layout_centerInParent="true"
            android:layout_marginStart="36dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/input_bg"
            android:ems="10"
            android:focusable="true"
            android:fontFamily="serif"
            android:gravity="top"
            android:hint="@string/status"
            android:importantForAutofill="no"
            android:inputType="text"
            android:minHeight="48dp"
            android:paddingStart="10dp"
            android:paddingTop="10dp"
            android:textColor="@color/black"
            android:textCursorDrawable="@color/black"
            android:textStyle="bold"
            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/submit_Button"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/status"
            android:layout_centerInParent="true"
            android:layout_marginStart="36dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/home_button_bg"
            android:backgroundTint="@color/black"
            android:focusable="true"
            android:fontFamily="serif"
            android:text="@string/submit"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold" />

    </RelativeLayout>
</layout>