<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.OtpVerificationPage">

    <data>

        <variable
            name="viewModel"
            type="com.example.mychatapplication.viewmodel.OtpVerificationViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/otpDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/otp"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/otp_verification_description"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/otp_description_size"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/otp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/inputCode1"
                android:layout_width="@dimen/otp_number_width_size"
                android:layout_height="@dimen/otp_number_height_size"
                android:backgroundTint="@null"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textAppearance="@style/Widget.AppCompat.Spinner.Underlined"
                android:textColor="@color/black"
                android:textSize="@dimen/otpSize"
                android:textStyle="bold"
                android:cursorVisible="false"
                tools:ignore="Label For" />

            <EditText
                android:id="@+id/inputCode2"
                android:layout_width="@dimen/otp_number_width_size"
                android:layout_height="@dimen/otp_number_height_size"
                android:layout_marginStart="4dp"
                android:backgroundTint="@null"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textAppearance="@style/Widget.AppCompat.Spinner.Underlined"
                android:textColor="@color/black"
                android:textSize="@dimen/otpSize"
                android:textStyle="bold"
                android:cursorVisible="false"
                tools:ignore="Label For" />

            <EditText
                android:id="@+id/inputCode3"
                android:layout_width="@dimen/otp_number_width_size"
                android:layout_height="@dimen/otp_number_height_size"
                android:layout_marginStart="4dp"
                android:backgroundTint="@null"
                android:gravity="center"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textAppearance="@style/Widget.AppCompat.Spinner.Underlined"
                android:textColor="@color/black"
                android:textSize="@dimen/otpSize"
                android:textStyle="bold"
                android:cursorVisible="false"
                tools:ignore="Label For" />

            <EditText
                android:id="@+id/inputCode4"
                android:layout_width="@dimen/otp_number_width_size"
                android:layout_height="@dimen/otp_number_height_size"
                android:layout_marginStart="4dp"
                android:backgroundTint="@null"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textAppearance="@style/Widget.AppCompat.Spinner.Underlined"
                android:textColor="@color/black"
                android:textSize="@dimen/otpSize"
                android:textStyle="bold"
                android:cursorVisible="false"
                tools:ignore="Label For" />

            <EditText
                android:id="@+id/inputCode5"
                android:layout_width="@dimen/otp_number_width_size"
                android:layout_height="@dimen/otp_number_height_size"
                android:layout_marginStart="4dp"
                android:backgroundTint="@null"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textAppearance="@style/Widget.AppCompat.Spinner.Underlined"
                android:textColor="@color/black"
                android:textSize="@dimen/otpSize"
                android:textStyle="bold"
                android:cursorVisible="false"
                tools:ignore="Label For" />

            <EditText
                android:id="@+id/inputCode6"
                android:layout_width="@dimen/otp_number_width_size"
                android:layout_height="@dimen/otp_number_height_size"
                android:layout_marginStart="4dp"
                android:backgroundTint="@null"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textAppearance="@style/Widget.AppCompat.Spinner.Underlined"
                android:textColor="@color/black"
                android:textSize="@dimen/otpSize"
                android:textStyle="bold"
                android:cursorVisible="false"
                tools:ignore="Label For" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/belowOtp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/otp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/didn_t_receive_otp"
                android:textColor="@color/black"
                android:textSize="@dimen/otp_below_line" />

            <TextView
                android:id="@+id/resend_otp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/resend_otp"
                android:textColor="@color/black"
                android:textSize="@dimen/otp_below_line"
                android:textStyle="bold" />

        </LinearLayout>

        <Button
            android:id="@+id/verifyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/belowOtp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/black"
            android:text="@string/verify_otp"
            android:textColor="@color/white"
            android:textSize="@dimen/verify_button_text_size" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/belowOtp"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:progressBackgroundTint="@color/black"
            android:progressTint="@color/black" />

    </RelativeLayout>
</layout>